--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -26,4 +26,12 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
+    implementation 'org.openftc:easyopencv:1.6.2'
+    implementation ('com.acmerobotics.dashboard:dashboard:0.4.9') {
+        exclude group: 'org.firstinspires.ftc'
+    }
+
 }
