--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -39,5 +39,7 @@ dependencies {
     implementation('com.acmerobotics.dashboard:dashboard:0.4.13') {
         exclude group: 'org.firstinspires.ftc'
     }
-
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
 }
