--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
+    implementation 'org.openftc:easyopencv:1.7.0'
 }
