--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -29,6 +29,11 @@ android {
     }
 }
 
+repositories {
+    maven { url = 'https://jitpack.io' }
+}
+
+
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
@@ -43,4 +48,5 @@ dependencies {
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
     implementation 'org.openftc:easyopencv:1.7.0'
+    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v3.0.0-ALPHA'
 }
